[tool.poetry]
name = "csshapley22"
version = "0.1.0"
description = ""
authors = ["Anonymous"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "csshapley22", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
dvc = "^2.43.4"
tqdm = "^4.64.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
openml = "^0.13.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
profile = "black"
