[tool.poetry]
name = "re_classwise_shapley"
version = "0.1.0"
description = "Reproduction of the paper 'CS-Shapley: Class-wise Shapley Values for Data Valuation in Classification'"
authors = ["Markus Semmler"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{ include = "re_classwise_shapley", from = "src" }]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.25.2"
pandas = "^1.5.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
dvc = "^3.15.2"
tqdm = "^4.64.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
openml = "^0.13.0"
click = "^8.1.3"
mlflow = "^2.6.0"
boto3 = "^1.28.36"
plotly = "^5.16.1"
dataframe_image = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
profile = "black"
